ai-core/src/planning/snapshots/ai_core__planning__tests__serde_envelope_expense_roundtrip.snap
---
source: ai-core/src/planning/tests.rs
expression: json
---
{
  "category": "Быт",
  "kind": {
    "type": "envelope",
    "value": {
      "MONEY": {
        "value": {
          "currency": "RUB",
          "value": "25000"
        }
      }
    }
  },
  "name": "Продукты"
}
