ai-core/src/planning/snapshots/ai_core__planning__tests__serde_expense_backward_compat_no_kind.snap
---
source: ai-core/src/planning/tests.rs
expression: "serde_json::to_value(&expense).unwrap()"
---
{
  "category": "Быт",
  "kind": {
    "type": "envelope",
    "value": {
      "RATE": {
        "value": "30"
      }
    }
  },
  "name": "Продукты"
}
